# PicoSnakeGame

./: Cargo.toml  README.md
.cargo/: config.toml
src/picosnakegame/: Cargo.toml
src/picosnakegame/src/: main.rs
